# dcli

./: README.md  pyproject.toml
dcli/: main.py
